fixed scaling on small screens

--- a/index.css
+++ b/index.css
@@ -662,7 +662,7 @@
         font-size: 5vw; 
     }
 
-    .word-1, .word-2, .word-3{
+    .word-1, .word-3{
         position:relative; 
         top: 13%
     }
@@ -681,6 +681,27 @@
     p {font-size: 2vw}
 
     a{font-size: 1.5vw}
+
+    .word-2{top: 13%}
+
+    .Clickable{
+      font-size: 5vw; 
+      position:relative; 
+      top: 0%;
+      margin:0;
+    }
+    .Clickable:visited{
+      font-size: 5vw; 
+      position:relative; 
+      top: 0%;
+      margin:0;
+    }
+    .Clickable:hover{
+      font-size: 5vw; 
+      position:relative; 
+      top: 0%;
+      margin:0;
+    }
 
     h3 {
         font-size: 1.5vw;
@@ -727,17 +748,13 @@
     #word5{padding-top:7vw}
 
 
-
-
-
-
 }
 
 @media only screen and (max-width: 1200px) 
 {
     .webgl{
-        top: -12vw;
-        margin-top: 200px;
+        top: -14vw;
+        margin-top: 0px;
     }
 }
 
